# Deus

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.py  install.py
.github/workflows/: CI.yml
deus-config/: deus-config.yml
import/: FetchGoogleTest.cmake  FetchYamlCPP.cmake
include/: config.hpp  core.hpp  resource.hpp
src/: config.cpp  core.cpp  main.cpp  resource.cpp
